# LibLogger

./: CMakeLists.txt
LibLogger/: CMakeLists.txt  LibLogger.pc.in
LibLogger/include/: ConsoleLogger.h  Logger.h
LibLogger/src/: ConsoleColors.cpp  ConsoleLogger.cpp
LoggerLib/: CMakeLists.txt  LoggerLib.pc.in
LoggerLib/include/: ConsoleColors.h
LoggerLib/src/: Logger.cpp
